examples/datalog/18_advanced_patterns/12_window_simulation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_window
Knowledge graph 'test_window' created.
Switched to knowledge graph: test_window
> .kg use test_window
Switched to knowledge graph: test_window
> +sales[(1, 100), (2, 150), (3, 200), (4, 125), (5, 175)].
Inserted 5 fact(s) into 'sales'.
> rank(Id, <COUNT:Other>) :- sales(Id, Val), sales(Other, OtherVal), OtherVal > Val.
Script error: Parse error: Unknown aggregate function: 
