examples/datalog/18_advanced_patterns/12_window_simulation.dl
% Test: Window function simulation
% Expected: Can simulate window functions with self-joins
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_window
.kg use test_window

% Sales data
+sales[(1, 100), (2, 150), (3, 200), (4, 125), (5, 175)].

% Rank by comparing values
rank(Id, <COUNT:Other>) :- sales(Id, Val), sales(Other, OtherVal), OtherVal > Val.

?- rank(Id, R).

% Running count (how many are <= this value)
running(Id, <COUNT:Other>) :- sales(Id, Val), sales(Other, OtherVal), OtherVal <= Val.

?- running(Id, R).

.kg use default
.kg drop test_window
